# dist2land

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: FindGDAL.cmake
share/dist2land/: providers.ini
src/: app_paths.cpp  app_paths.h  archive_extract.cpp  archive_extract.h  dist2land_gdal_plugin.cpp  dist2land_gdal_plugin_api.h  distance_call_posix.cpp  distance_call_win.cpp  distance_iface.h  http_download.cpp  http_download.h  main.cpp  ogr_distance.cpp  ogr_distance.h  providers.cpp  providers.h  util.cpp  util.h  win_runtime.cpp  win_runtime.h
